syntax = "proto3";

option csharp_namespace = "gRPC.Details.Server.Protos.DistributeTask";

import "Enums.proto";

service DistributeTaskService {
	rpc AddTask(AddedTask) returns (AddedTaskResult);
}

message AddedTask
{
	int32 toDoListId = 1;
	TaskStatus statusId = 2;
	string name = 3;
}

message AddedTaskResult
{	
	string message = 1;
	OperationStatus statusId = 2;
}	